[package]
name = "rust-cryptocraphy"
version = "0.1.0"
edition = "2024"

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
base64 = "0.22.1"
blake2 = "0.10.6"
blake3 = "1.8.1"
chacha20poly1305 = "0.10.1"
crypto = "0.5.1"
ed25519-dalek = "2.1.1"
generic-array = "1.2.0"
hex = "0.4.3"
rand = "0.9.0"
rsa = "0.9.8"
rustc-serialize = "0.3.25"
secp256k1 = "0.30.0"
sha2 = "0.10.8"
